--- a/content/guides/faq.adoc
+++ b/content/guides/faq.adoc
@@ -50,7 +50,7 @@ _ has no special meaning in Clojure as a symbol. However, it is a convention to 
 Most Clojure data structure operations, including `conj` (conjoin), are designed to give the user a performance expectation. With `conj`, the expectation is that insertion should happen at the place where this operation is efficient. Lists (as linked lists) can make a constant time insertion only at the front. Vectors (indexed) are designed to expand at the back. As the user, you should consider this when you choose which data structure to use. In Clojure, vectors are used with much greater frequency.
 
 [[seqs_vs_colls]]
-**I keep forgetting that after calling sequence functions on vectors/sets, the return value no longer is no longer has vector or set semantics.**
+**I keep forgetting that after calling sequence functions on vectors/sets, the return value is no longer a vector or a set.**
 
 Generally you should divide the Clojure core functions into these two categories:
 
