Add Social Superstore to companies using clojure

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -178,6 +178,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://us.sios.com/[SIOS Technology Corp.]
 * http://smilebooth.com/[Smilebooth]
 * http://smxemail.com/[SMX]
+* https://socialsuperstore.com/[Social Superstore]
 * http://sonian.com/[Sonian]
 * https://soundcloud.com[Soundcloud]
 * https://www.sparkfund.co/[SparkFund]
