--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -156,6 +156,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://www.pointslope.com[Point Slope]
 * http://dmarc.postmarkapp.com/[Postmark]
 * https://precursorapp.com/[Precursor]
+* http://www.premium.nl/[Premium Business Consultants BV]
 * http://www.print.io/[Print.IO]
 * http://projexsys.com/[Projexsys]
 * https://publizr.com/[Publizr]
