update books page

--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,6 +12,11 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70"]
 |===
 
+| image::http://ecx.images-amazon.com/images/I/61p47dd81cL._SL160.jpg[Clojure for Java Developers, link="http://amzn.com/B019OP7JIW"]
+| http://amzn.com/B019OP7JIW[Clojure for Java Developers] +
+by Eduardo Diaz +
+Feb 23, 2016
+
 | image::http://ecx.images-amazon.com/images/I/51ofF2ckdkL._SL160.jpg[Clojure for Finance, link="http://amzn.com/1785289284"]
 | http://amzn.com/1785289284[Clojure for Finance] +
 by Timothy Washington +
