--- a/content/guides/faq.adoc
+++ b/content/guides/faq.adoc
@@ -49,6 +49,8 @@ _ has no special meaning in Clojure as a symbol. However, it is a convention to 
 
 Most Clojure data structure operations, including `conj` (conjoin), are designed to give the user a performance expectation. With `conj`, the expectation is that insertion should happen at the place where this operation is efficient. Lists (as linked lists) can make a constant time insertion only at the front. Vectors (indexed) are designed to expand at the back. As the user, you should consider this when you choose which data structure to use. In Clojure, vectors are used with much greater frequency.
 
+If your goal is specifically to "add to the front of the collection", then the appropriate function to use is `cons`, which will always add to the front. Note however that this will produce a sequence, not an instance of the original collection type.
+
 [[seqs_vs_colls]]
 **<<faq#seqs_vs_colls,I keep forgetting that after calling sequence functions on vectors/sets, the return value is no longer a vector or a set.>>**
 
